desing section done

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header class="w-11/12 mx-auto">
       <nav class="bg-white rounded flex justify-between items-center p-3">
         <div class=" flex items-center gap-2">
-          <img src="./logo.png" alt="">
+          <img src="assets/logo.png" alt="">
           <h1 class="text-3xl ">Dev<span class="font-bold text-3xl text-black">Doard</span></h1>
         </div>
         <div class="flex items-center gap-3">
-          <img src="./checkbox.png" alt="">
+          <img src="assets/checkbox.png" alt="">
           <p id="nav-task" class="font-bold text-xl">23</p>
-          <button id="change-bg"><img src="./theme-btn.png" alt=""></button>
+          <button id="change-bg"><img src="assets/theme-btn.png" alt=""></button>
         </div>
       </nav>
     </header>
@@ -27,7 +27,7 @@
               <div class="bg-white rounded p-4 grid grid-cols-1 lg:grid-cols-[1fr_2fr_1fr] gap-3">
                 <div class="bg-[#f4f7ff] rounded flex items-center gap-4 p-4">
                   <div class="w-14 h-14 bg-white rounded-full flex justify-center items-center">
-                    <img src="./checkbox.png" alt="">
+                    <img src="assets/checkbox.png" alt="">
                   </div>
                   <div>
                     <p>Task Assigned</p>
@@ -36,13 +36,13 @@
                 </div>
                 <div id="another_page" class="bg-linear-to-r from-[#3b55fd] to-[#8e9df8] rounded">
                  <div class="p-4 flex items-center gap-4">
-                  <img src="./board.png" alt="">
+                  <img src="assets/board.png" alt="">
                   <p class="font-bold text-white text-xl">Discover Something <br>New Today!</p>
                  </div>
                 </div>
                 <div class="bg-[#f4f7ff] rounded flex items-center gap-4 p-4">
                   <div class="w-14 h-14 bg-white rounded-full flex justify-center items-center">
-                    <img src="./calender.png" alt="">
+                    <img src="assets/calender.png" alt="">
                   </div>
                   <div>
                     <p id="date">Wed ,
